# gafm

./: .cruft.json  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml  vulture_allowlist.py
gafm/: __main__.py  config.py  gafm.py  metrics.py  stats.py
tests/: test.env  test_config.py  test_gafm.py
