[project]
name = "GAFM"
license = "GPLv3"
requires-python = "^3.11"


[tool.black]
line-length = 100

[tool.cruft]
skip = [
    "GAFM/__init__.py",
    "README.md",
    "CHANGELOG.md",
    "vulture_allowlist.py"
]

[tool.isort]
known_first_party = "GAFM"
line_length = 100
skip_glob="**/__init__.py"
### for compatibility with black
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli = 1
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(module)s.%(funcName)s.%(lineno)d: %(message)s"
log_cli_date_format = "%H:%M:%S"
addopts = "-v --capture=sys tests"

[tool.vulture]
exclude=[]
paths = ["gafm", "vulture_allowlist.py"]

[tool.poetry]
name = "GAFM"
version = "v0.1.0"
description = "A tarpit for API fuzzers"
authors = ["Mike Salvatore <mike.s.salvatore@gmail.com>"]
license = "GPLv3"
classifiers=[
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11"
]
repository = "https://github.com/mssalvatore/GAFM"
readme = "README.md"
include = ["CHANGELOG.md", "README.md"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.29.0"
fastapi = "^0.110.2"
httpx = "^0.27.0"
redis = "^5.0.4"
pydantic-settings = "^2.2.1"

[tool.poetry.dev-dependencies]
black = "24.3.0"
dlint = "0.14.1"
flake8 = "6.0.0"
isort = "5.12.0"
mypy = "1.5.1"
pudb = "^2022.1.2"
pynvim = "^0.4.3"
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
pytest-xdist = "^3.3.1"
vulture = "2.9.1"

[tool.poetry.group.dev.dependencies]
tabulate = "^0.9.0"
types-tabulate = "^0.9.0.20240106"
types-redis = "^4.6.0.20240425"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
